Fix spacing issue between profile pic and bottom of div

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,10 @@ body {
   padding: 5rem 0 ;
 }
 
+.img {
+  vertical-align:bottom;
+}
+
 nav,
 h1,
 h2,
@@ -98,6 +102,13 @@ a:hover {
   font-size: 2rem;
 }
 
+
+.photo {
+  display: flex;
+  justify-content: center;
+}
+
+
 .button {
   /* background: #7D9FB5;
   border-color: #7D9FB5; */
@@ -105,7 +116,6 @@ a:hover {
   display: inline-block;
   font-weight: 900;
 }
-
 
 li {
   margin-bottom: 0;
@@ -116,12 +126,13 @@ li {
   color: #fff;
 }
 
+
 /* Navigation
 =============== */
 .nav {
   background: #000;
   color: #fff;
-    word-spacing: 0.3rem;
+  word-spacing: 0.3rem;
 }
 
 .nav ul {
